<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.fragments.PostFragment">

    <RelativeLayout
        android:layout_gravity="center_horizontal"
        android:layout_width="380dp"
        android:layout_height="match_parent">

        <EditText
            android:id="@+id/description_input"
            android:hint="@string/post_description_hint"
            android:layout_width="match_parent"
            android:layout_height="120dp"
            android:layout_marginTop="20dp"
            android:padding="10dp"
            android:gravity="top"
            android:background="@drawable/edit_text_border"/>

        <Button
            android:id="@+id/post_select_image_button"
            android:layout_below="@id/description_input"
            android:layout_centerInParent="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/select_content_button"
            />

        <Button
            android:id="@+id/post_submit_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:layout_below="@id/post_selected_media_text"
            android:text="@string/post_submit_button"
            />

        <TextView
            android:gravity="center"
            android:id="@+id/post_selected_media_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:layout_below="@+id/post_select_image_button"
            android:text="@string/selected_content_text"
            />





    </RelativeLayout>

</FrameLayout>