<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:gravity="center_vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/signin"
        android:textSize="14pt"
        android:gravity="center"
        />
    <TextView
        android:id="@+id/si_error_output"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/md_theme_light_error"
        android:gravity="center"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:labelFor="@+id/email_input"
            android:text="@string/email"/>
        <EditText
            android:id="@+id/email_input"
            android:minWidth="200dp"
            android:maxWidth="300dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="textEmailAddress"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:labelFor="@+id/password_input"
            android:text="@string/password"/>
        <EditText
            android:id="@+id/password_input"
            android:minWidth="200dp"
            android:maxWidth="300dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/password_forgotten" />

        <Button
            android:id="@+id/submit_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/signin"
            android:onClick="signIn"
            />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/create_account"
            android:onClick="redirectToRegister"
            android:backgroundTint="@color/md_theme_light_secondaryContainer"
            android:textColor="@color/md_theme_light_onSecondaryContainer"/>

    </LinearLayout>




</LinearLayout>