<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <LinearLayout
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical"
        >
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/register"
            android:textSize="14pt"
            android:gravity="center"
            android:layout_marginBottom="20dp">
        </TextView>
        <TextView
            android:id="@+id/su_error_output"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/md_theme_light_error"/>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center">
            <TextView
                android:text="@string/username"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
            <EditText
                android:id="@+id/usernameId"
                android:hint="@string/username"
                android:layout_width="200dp"
                android:maxWidth="300dp"
                android:minWidth="150dp"
                android:layout_height="match_parent"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center">
            <TextView
                android:text="@string/email"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
            <EditText
                android:id="@+id/emailId"
                android:hint="@string/email"
                android:inputType="textEmailAddress"
                android:layout_width="200dp"
                android:maxWidth="300dp"
                android:minWidth="150dp"
                android:layout_height="match_parent"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center">
            <TextView
                android:text="@string/password"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
            <EditText
                android:id="@+id/passwordId"
                android:hint="@string/password"
                android:layout_width="200dp"
                android:maxWidth="300dp"
                android:minWidth="150dp"
                android:inputType="textPassword"
                android:layout_height="match_parent"/>
        </LinearLayout>
        <Button
            android:onClick="signUp"
            android:id="@+id/registerButton"
            android:layout_marginTop="20dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/inscription_button"/>
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/already_have_account"
            android:onClick="redirectToLogin"
            android:textColor="@color/md_theme_light_onSecondaryContainer"
            android:backgroundTint="@color/md_theme_light_secondaryContainer"/>
    </LinearLayout>

</RelativeLayout>