<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.fragments.SearchFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
        <SearchView
            android:id="@+id/input_search"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:orientation="horizontal"
            android:clickable="true"
            android:hint="@string/search_page_input"
            android:inputType="text"
            android:paddingHorizontal="10dp" />

        <HorizontalScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="5dp">

                <Button
                    android:id="@+id/post_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="5dp"
                    android:paddingHorizontal="15dp"
                    android:text="@string/action_post_string"
                    app:icon="@drawable/camera"
                    app:iconTint="@color/md_theme_dark_onBackground" />

                <Button
                    android:id="@+id/user_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="5dp"
                    android:paddingHorizontal="15dp"
                    android:text="@string/action_profile_string"
                    app:icon="@drawable/user"
                    app:iconTint="@color/md_theme_dark_onBackground" />
            </LinearLayout>
        </HorizontalScrollView>

        <ViewSwitcher
            android:id="@+id/search_switcher"
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">
                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/post_list"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager">
                </androidx.recyclerview.widget.RecyclerView>
                <ProgressBar
                    android:id="@+id/progress_bar_search_posts"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal|bottom"
                    android:visibility="invisible"/>
            </FrameLayout>
            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">
                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/user_list"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager" />
                <ProgressBar
                    android:id="@+id/progress_bar_search_users"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal|bottom"
                    android:visibility="invisible"/>
            </FrameLayout>
        </ViewSwitcher>

    </LinearLayout>

</FrameLayout>